fixed pieces of code

--- a/src/features/DestinationMaps/Cyrpus/Cyrpus.module.scss
+++ b/src/features/DestinationMaps/Cyrpus/Cyrpus.module.scss
@@ -11,14 +11,21 @@
 
 // Location
 
-.test {
-  background: #eee;
-  border-radius: 50%;
+.polisLocation {
+  position: absolute;
+  top: 54%;
+  right: 86%;
+  background: #fff;
+  border-radius: 24px;
+  padding: 0 4px;
+}
+
+.polis {
   &::before {
     content: '';
-    position: absolute;
-    left: -10px;
-    top: 50%;
+    display: inline-block;
+    margin-bottom: 3px;
+    margin-right: 5px;
     width: 4px;
     height: 4px;
     background: #0abaee;
@@ -26,172 +33,285 @@
   }
 }
 
-.polis {
-  background: $color-white;
-  border-radius: 50%;
-
-  &::before {
-    content: '';
-    position: absolute;
-    left: -10px;
-    top: 50%;
-    width: 4px;
-    height: 4px;
-    background: #0abaee;
-    border-radius: 50%;
-  }
+.goudiLocation {
+  position: absolute;
+  top: 61%;
+  right: 91%;
+  background: #fff;
+  border-radius: 24px;
+  padding: 0 4px;
 }
 
 .goudi {
   &::after {
     content: '';
-    position: absolute;
-    right: -10px;
-    top: 50%;
+    display: inline-block;
+    margin-bottom: 3px;
+    margin-left: 5px;
     width: 4px;
     height: 4px;
     background: #0abaee;
     border-radius: 50%;
   }
 }
+
+.lysosLocation {
+  position: absolute;
+  top: 62%;
+  right: 78%;
+  background: #fff;
+  border-radius: 24px;
+  padding: 0 4px;
+}
+
 .lysos {
   &::before {
     content: '';
-    position: absolute;
-    left: -10px;
-    top: 50%;
+    display: inline-block;
+    margin-bottom: 3px;
+    margin-right: 5px;
     width: 4px;
     height: 4px;
     background: #0abaee;
     border-radius: 50%;
   }
 }
+
+.miliouLocation {
+  position: absolute;
+  top: 70%;
+  right: 84%;
+  background: #fff;
+  border-radius: 24px;
+  padding: 0 4px;
+}
+
 .miliou {
   &::before {
     content: '';
-    position: absolute;
-    left: -10px;
-    top: 50%;
+    display: inline-block;
+    margin-bottom: 3px;
+    margin-right: 5px;
     width: 4px;
     height: 4px;
     background: #0abaee;
     border-radius: 50%;
   }
 }
+
+.paphosLocation {
+  position: absolute;
+  top: 80%;
+  right: 84%;
+  background: #fff;
+  border-radius: 24px;
+  padding: 0 4px;
+}
+
 .paphos {
   &::before {
     content: '';
-    position: absolute;
-    left: -10px;
-    top: 50%;
+    display: inline-block;
+    margin-bottom: 3px;
+    margin-right: 5px;
     width: 4px;
     height: 4px;
     background: #0abaee;
     border-radius: 50%;
   }
 }
+
+.omodosLocation {
+  position: absolute;
+  top: 72%;
+  right: 72%;
+  background: #fff;
+  border-radius: 24px;
+  padding: 0 4px;
+}
+
 .omodos {
   &::before {
     content: '';
-    position: absolute;
-    left: -10px;
-    top: 50%;
+    display: inline-block;
+    margin-bottom: 3px;
+    margin-right: 5px;
     width: 4px;
     height: 4px;
     background: #0abaee;
     border-radius: 50%;
   }
 }
+
+.kakopetriaLocation {
+  position: absolute;
+  top: 60%;
+  right: 64%;
+  background: #fff;
+  border-radius: 24px;
+  padding: 0 4px;
+}
+
 .kakopetria {
   &::before {
     content: '';
-    position: absolute;
-    left: -10px;
-    top: 50%;
+    display: inline-block;
+    margin-bottom: 3px;
+    margin-right: 5px;
     width: 4px;
     height: 4px;
     background: #0abaee;
     border-radius: 50%;
   }
 }
+
+.kalavassosLocation {
+  position: absolute;
+  top: 72%;
+  right: 56%;
+  background: #fff;
+  border-radius: 24px;
+  padding: 0 4px;
+}
+
 .kalavassos {
   &::after {
     content: '';
-    position: absolute;
-    right: -10px;
-    top: 50%;
+    display: inline-block;
+    margin-bottom: 3px;
+    margin-left: 5px;
     width: 4px;
     height: 4px;
     background: #0abaee;
     border-radius: 50%;
   }
 }
+
+.lemessoLocation {
+  position: absolute;
+  top: 84%;
+  right: 54%;
+  background: #fff;
+  border-radius: 24px;
+  padding: 0 4px;
+}
+
 .lemesso {
   &::before {
     content: '';
-    position: absolute;
-    left: -10px;
-    top: 50%;
+    display: inline-block;
+    margin-bottom: 3px;
+    margin-right: 5px;
     width: 4px;
     height: 4px;
     background: #0abaee;
     border-radius: 50%;
   }
 }
+
+.tochniLocation {
+  position: absolute;
+  top: 78%;
+  right: 50%;
+  background: #fff;
+  border-radius: 24px;
+  padding: 0 4px;
+}
+
 .tochni {
   &::before {
     content: '';
-    position: absolute;
-    left: -10px;
-    top: 50%;
+    display: inline-block;
+    margin-bottom: 3px;
+    margin-right: 5px;
     width: 4px;
     height: 4px;
     background: #0abaee;
     border-radius: 50%;
   }
 }
+
+.chirokitaLocation {
+  position: absolute;
+  top: 70%;
+  right: 44%;
+  background: #fff;
+  border-radius: 24px;
+  padding: 0 4px;
+}
+
 .chirokita {
   &::before {
     content: '';
-    position: absolute;
-    left: -10px;
-    top: 50%;
+    display: inline-block;
+    margin-bottom: 3px;
+    margin-right: 5px;
     width: 4px;
     height: 4px;
     background: #0abaee;
     border-radius: 50%;
   }
 }
+
+.lefkosiaLocation {
+  position: absolute;
+  top: 50%;
+  right: 44%;
+  background: #fff;
+  border-radius: 24px;
+  padding: 0 4px;
+}
+
 .lefkosia {
   &::before {
     content: '';
-    position: absolute;
-    left: -10px;
-    top: 50%;
+    display: inline-block;
+    margin-bottom: 3px;
+    margin-right: 5px;
     width: 4px;
     height: 4px;
     background: #0abaee;
     border-radius: 50%;
   }
 }
+
+.larnacaLocation {
+  position: absolute;
+  top: 68%;
+  right: 34%;
+  background: #fff;
+  border-radius: 24px;
+  padding: 0 4px;
+}
+
 .larnaca {
   &::before {
     content: '';
-    position: absolute;
-    left: -10px;
-    top: 50%;
+    display: inline-block;
+    margin-bottom: 3px;
+    margin-right: 5px;
     width: 4px;
     height: 4px;
     background: #0abaee;
     border-radius: 50%;
   }
 }
+
+.agiaNapaLocation {
+  position: absolute;
+  top: 60%;
+  right: 16%;
+  background: #fff;
+  border-radius: 24px;
+  padding: 0 4px;
+}
+
 .agiaNapa {
   &::before {
     content: '';
-    position: absolute;
-    left: -10px;
-    top: 50%;
+    display: inline-block;
+    margin-bottom: 3px;
+    margin-right: 5px;
     width: 4px;
     height: 4px;
     background: #0abaee;
@@ -206,6 +326,9 @@
 }
 
 .destination__cartShown {
+  position: absolute;
+  bottom: 100%;
+  left: 100%;
   height: 310px;
   width: 260px;
   background-color: #fff;
@@ -248,6 +371,7 @@
 }
 
 .link__detailCartMap {
+  cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
