--- a/src/features/DestinationLayout/DestionationsList/DestinationsList.module.scss
+++ b/src/features/DestinationLayout/DestionationsList/DestinationsList.module.scss
@@ -3,6 +3,10 @@
   background-color: $color-laros-light-grey;
   overflow-y: scroll;
   margin-top: 40px;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 .item {
   font-size: 12px;
@@ -11,7 +15,7 @@
   display: flex;
   position: relative;
   align-items: center;
-  padding-left: 92px;
+  justify-content: center;
 }
 .title {
 }
