--- a/src/features/DestinationMaps/Cyrpus/Cyrpus.module.scss
+++ b/src/features/DestinationMaps/Cyrpus/Cyrpus.module.scss
@@ -2,7 +2,7 @@
 
 .container {
   margin-top: 50px;
-  background: url('../../../../public/assets/images/destinations/Cyrpus.png')
+  background: url('../../../../public/assets/images/destinations/Cyrpus/Cyrpus.png')
     center;
   width: 832px;
   height: 488px;
@@ -297,7 +297,7 @@
   }
 }
 
-.agiaNapaLocation {
+.agianapaLocation {
   position: absolute;
   top: 60%;
   right: 16%;
@@ -306,7 +306,7 @@
   padding: 0 4px;
 }
 
-.agiaNapa {
+.agianapa {
   &::before {
     content: '';
     display: inline-block;
@@ -317,66 +317,4 @@
     background: #0abaee;
     border-radius: 50%;
   }
-}
-
-// Destinations
-
-.hidden {
-  display: none;
-}
-
-.destination__cartShown {
-  position: absolute;
-  bottom: 100%;
-  left: 100%;
-  height: 310px;
-  width: 260px;
-  background-color: #fff;
-  box-shadow: 0 12px 12px rgba(0, 60, 118, 0.15);
-  border-radius: 8px;
-  z-index: 3;
-}
-
-.destination__cartPicture {
-  display: flex;
-  justify-content: center;
-  margin-top: 8px;
-}
-
-.destination__cartTitle {
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 20px;
-  color: #1b242d;
-  margin: 16px 0 8px 16px;
-}
-
-.destination__cartText {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 20px;
-  color: #1b242d;
-  max-width: 220px;
-  margin-bottom: 16px;
-  margin-left: 16px;
-}
-
-.link__blockDestinationMap {
-  display: flex;
-  justify-content: center;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 20px;
-  color: #1b242d;
-}
-
-.link__detailCartMap {
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 240px;
-  height: 36px;
-  background-color: $color-laros-light-grey;
-  border-radius: 8px;
 }
