--- a/src/features/HotelCard/HotelCard.module.scss
+++ b/src/features/HotelCard/HotelCard.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   width: 368px;
   height: 471px;
+  overflow: hidden;
   background-color: $color-white;
   border-radius: 16px;
   box-shadow: $color-light-grey;
@@ -12,9 +13,9 @@
 }
 
 .slider {
+  position: relative;
   width: 100%;
   height: 180px;
-  background-color: $color-laros-light-grey;
 }
 
 .header {
