fix pull request

--- a/src/pages/HotelPage/HotelPage.module.scss
+++ b/src/pages/HotelPage/HotelPage.module.scss
@@ -1,8 +1,7 @@
 @use '../../styles/style.scss' as *;
 
 .HotelPage {
-  background-position: top;
-  background-repeat: no-repeat;
+  background: top no-repeat;
   background-size: 100%;
   padding-top: 80px;
   margin-top: -40px;
