--- a/src/pages/HotelPage/Facility/Facility.module.scss
+++ b/src/pages/HotelPage/Facility/Facility.module.scss
@@ -17,11 +17,12 @@
   font-size: 12px;
   font-weight: 400;
   line-height: 20px;
+  margin-bottom: 64px;
 }
 
 .FacilityWrap {
-  margin-top: 64px;
-  padding: 0 188px;
+  margin: 0 auto;
+  width: 1060px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
