--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -45,4 +45,5 @@ $color-range: #333333;
 $color-lazur-label: #2d9cdb;
 $color-blue-label: #2f80ed;
 $color-orange: #f2994a;
+$color-box-shadow: 0px 4px 12px rgba(27, 36, 45, 0.15);
 
