add about page (#34)
* add advantageCard comp

* add AdvantageCards

* add slider and text block

* add some styles

* add old slider vers

* add new version of slider

* refactor AboutSlider

* add style fix and swiper props

* fix margin styles

* fix PR

* remove extra

* refactor about page advantage cards

Co-authored-by: Martin Lee <72463518+martinLjs@users.noreply.github.com>

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -88,4 +88,8 @@ input[type='number'] {
   .swiper-button-prev::after {
     display: none;
   }
+  .swiper-wrapper {
+    // padding: 0 40px;
+  }
 }
+
