--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -47,7 +47,7 @@
   font-weight: $fw-semibold;
   padding: 0 0 4px 24px;
   &::placeholder {
-    color: $color-placeholder;
+    color: $color-checkbox-gray;
     font-size: 14px;
     font-weight: $fw-regular;
     line-height: 17px;
@@ -58,4 +58,9 @@
   position: absolute;
   bottom: 8px;
   right: 9px;
+}
+.counter {
+  position: absolute;
+  right: 8px;
+  top: 8px;
 }
