--- a/src/pages/TripFormPage/Step1/TripDayForm/TripDayForm.module.scss
+++ b/src/pages/TripFormPage/Step1/TripDayForm/TripDayForm.module.scss
@@ -84,6 +84,7 @@
   font-size: 12px;
   font-weight: $fw-regular;
   line-height: 14px;
+  white-space: pre-wrap;
 }
 .sectionValue {
   position: relative;
