--- a/src/pages/HotelPage/HotelIntro/HotelIntro.module.scss
+++ b/src/pages/HotelPage/HotelIntro/HotelIntro.module.scss
@@ -48,6 +48,12 @@
   margin-top: 12px;
   margin-bottom: 16px;
 }
+.Map {
+  background-color: #0abaee;
+  width: 100%;
+  height: 425px;
+  border-radius: 0 16px 0 0;
+}
 .TagsTitle {
   margin: 28px 0 12px 15px;
 }
@@ -56,14 +62,15 @@
 }
 
 .InputCalendar {
-  padding: 17px 56px 17px 16px;
-  width: 50%;
   border-radius: 8px;
-  border: 1px solid $color-laros-light-grey;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 14px;
+  border: 1px solid red;
+  margin: 10px 0;
+  padding: 10px 0 0;
+  width: 50%;
+  height: content-box;
 }
+
+
 .HotelIntroOptionWrap {
   display: flex;
   justify-content: space-between;
@@ -80,15 +87,14 @@
   line-height: 17px;
 }
 
-.HotelIntroNumberInput {
-  padding: 17px 56px 17px 16px;
-  width: 50%;
-  border-radius: 8px;
-  border: 1px solid $color-laros-light-grey;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 14px;
+.NumberInputWrap {
+  display: flex;
+  justify-content: space-between;
 }
+.HotelIntroNumberInput {
+  max-width: 49%;
+}
+
 
 .HotelIntroAddRoom {
   display: flex;
