--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -1,148 +1,103 @@
 @use '/src/styles/style.scss' as *;
 
-.formWrapper {
-  @include container;
-  padding-top: 40px;
-  padding-bottom: 160px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.main {
+  position: relative;
+  width: 100vw;
+  height: 810px;
+  background-image: url('/assets/images/homepage/background.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  color: $color-white;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+
+  margin-bottom: 500px;
+}
+
+.main_blur {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 60, 118, 0.25);
+  backdrop-filter: blur(4px);
+}
+
+.main_wrapper {
+  width: 100%;
+  height: 100%;
+}
+
+.main_text {
+  max-width: 530px;
+  margin-left: auto;
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  z-index: 100;
 }
 
 .title {
-  margin-bottom: 60px;
-  color: $color-midnight-blue;
+  font-weight: $fw-semibold;
+  font-size: 56px;
+  line-height: 67px;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.switchTabs {
-  margin-bottom: 60px;
+.subtitle {
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-weight: $fw-regular;
+  font-size: 14px;
+  margin-bottom: 42px;
 }
 
-.delivery {
-  .deliveryTitle {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    white-space: nowrap;
-
-    .description {
-      @include regularText;
-      color: $color-santas-grey;
-    }
-
-    .countries {
-      max-width: 220px;
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-    }
-  }
-
-  .deliveryContent {
-    left: auto;
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
+.slider {
+  position: absolute;
+  width: 1360px;
+  height: 470px;
+  background-color: #fafbfc;
+  box-shadow: 0px 4px 12px rgba(0, 60, 118, 0.05);
+  border-radius: 24px;
+  top: 750px;
+  left: 100%;
+  transform: translate(-50%, 0);
+  z-index: 50;
 }
 
-.filtersWrapper {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  max-width: 800px;
-  margin-bottom: 20px;
+.content_wrapper {
+  width: 1360px;
+  margin: 0 auto;
+  text-align: center;
 }
 
-.label {
-  width: 100%;
-
-  & > label {
-    padding-left: 10px;
-  }
+.video {
+  width: 70%;
+  height: 100%;
+  position: relative;
+  margin-left: auto;
 }
 
-.select {
-  max-width: 265px;
-  height: 60px;
-  border: none;
-  border-left: 1px solid transparent;
-  border-right: 1px solid transparent;
-
-  :global(.CSS_select__control) {
-    border-radius: 0;
-
-    &:hover {
-      box-shadow: $shadow-standard-a10;
-    }
-
-    &:focus-within {
-      box-shadow: $shadow-picton-blue, $shadow-standard-a10;
-    }
-  }
-
-  :global(.CSS_select__placeholder) {
-    @include placeholder;
-  }
+.play_icon {
+  position: absolute;
+  left: 30%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border: 3px solid $color-white;
+  padding: 13px 15px 13px 17px;
+  border-radius: 100%;
+  cursor: pointer;
 }
 
-.inputRange {
-  border-left: 1px solid transparent;
-  border-right: 1px solid transparent;
-
-  & > div {
-    height: 60px;
-    background-color: $color-white;
-    border: none;
-
-    &:hover {
-      box-shadow: $shadow-standard-a10;
-    }
-
-    &:focus-within {
-      box-shadow: $shadow-picton-blue, $shadow-standard-a10;
-    }
-
-    & input::placeholder {
-      @include placeholder;
-    }
-  }
-}
-
-.firstChild {
-  & > div:first-of-type,
-  :global(.CSS_select__control) {
-    border-radius: 10px 0 0 10px;
-  }
-}
-
-.lastChild {
-  & > div:first-of-type,
-  :global(.CSS_select__control) {
-    border-radius: 0 10px 10px 0;
-  }
-}
-
-.bottomPanel {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  max-width: 800px;
-  margin-bottom: 20px;
-}
-
-.deliveryGroup {
-  gap: 12px;
-}
-
-.submitButton {
-  height: 60px;
-  max-width: 172px;
-  width: 100%;
-  @include boldText;
+.selectType_title {
+  text-align: center;
+  font-style: normal;
+  font-weight: $fw-extrabold;
   font-size: 16px;
-  line-height: 19px;
-  border-radius: 12px;
+  color: $color-black;
+  padding: 32px 0;
+}
+
+.commentsWrapper {
+  background-color: rgba(242, 245, 248, 1);
 }
