fix pull request

--- a/src/pages/HotelPage/RoomCards/RoomCard/RoomCard.module.scss
+++ b/src/pages/HotelPage/RoomCards/RoomCard/RoomCard.module.scss
@@ -20,6 +20,9 @@
   font-size: 14px;
   font-weight: 700;
   line-height: 20px;
+  &:first-letter {
+    text-transform: uppercase;
+  }
 }
 .RoomCardInfo {
   margin: 18px 0;
