--- a/src/features/HotelCard/HotelCard.module.scss
+++ b/src/features/HotelCard/HotelCard.module.scss
@@ -109,7 +109,7 @@
   line-height: 12px;
   text-transform: capitalize;
   color: $color-white;
-  padding: 4px 8px;
+  padding: 4px;
   background: $color-secondary;
   border-radius: 16px;
 }
