--- a/src/pages/HotelPage/OtherHotels/OtherHotels.module.scss
+++ b/src/pages/HotelPage/OtherHotels/OtherHotels.module.scss
@@ -19,3 +19,12 @@
 .OtherHotelsWrap {
   margin: 0 144px;
 }
+.PrevButton {
+  position: absolute;
+  left: -50px;
+}
+.NextButton {
+  position: absolute;
+  right: -30px;
+  z-index: 100;
+}
