--- a/src/features/HotelCard/HotelCard.module.scss
+++ b/src/features/HotelCard/HotelCard.module.scss
@@ -4,18 +4,20 @@
   display: flex;
   flex-direction: column;
   width: 368px;
-  height: 471px;
-  overflow: hidden;
   background-color: $color-white;
   border-radius: 16px;
   box-shadow: $color-light-grey;
   transition: 0.3s;
 }
 
-.slider {
-  position: relative;
+.HotelCardImage {
   width: 100%;
   height: 180px;
+  background-color: $color-laros-light-grey;
+  border-radius: 16px 16px 0 0;
+  img {
+    border-radius: 16px 16px 0 0;
+  }
 }
 
 .header {
