--- a/src/pages/TripOffersPage/TripOffersPage.module.scss
+++ b/src/pages/TripOffersPage/TripOffersPage.module.scss
@@ -7,9 +7,19 @@
 }
 .bg {
   width: 100%;
-  height: 500px;
+  height: 400px;
   background-size: cover;
+  background-position: center;
   margin-bottom: 132px;
+  &::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 400px;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+    left: 0;
+    right: 0;
+  }
 }
 .title,
 .description,
@@ -48,6 +58,7 @@
   font-size: 20px;
   font-weight: $fw-bold;
   line-height: 24px;
+  margin-bottom: 22px;
 }
 
 .viewIcon {
@@ -68,4 +79,25 @@
   justify-content: space-between;
 }
 .list {
+}
+.filterSelects {
+  display: flex;
+  align-items: center;
+  margin-bottom: 24px;
+}
+.sortFrom {
+  font-size: 14px;
+  font-weight: $fw-regular;
+  line-height: 17px;
+  margin: 0 9px 0 24px;
+}
+
+.tags {
+  display: flex;
+  overflow-x: scroll;
+}
+.tagSwitchFilters {
+  display: flex;
+  justify-content: space-between;
+  height: 31px;
 }
