--- a/src/pages/TripOffersPage/TripOffersPage.module.scss
+++ b/src/pages/TripOffersPage/TripOffersPage.module.scss
@@ -74,6 +74,7 @@
   display: flex;
   flex-wrap: wrap;
   width: calc(368px * 3 + 48px);
+  margin-bottom: 30px;
 }
 .grid {
   justify-content: space-between;
