--- a/src/pages/SpecialOffersPage/SpecialOffersPage.module.scss
+++ b/src/pages/SpecialOffersPage/SpecialOffersPage.module.scss
@@ -1,1 +1,32 @@
 @use 'styles/style.scss' as *;
+
+.wrapper {
+  height: 100%;
+  background-color: $color-white;
+  border: 1px solid $color-white;
+  border-radius: 16px;
+  box-shadow: 0 4px 4px 0 $color-shadow;
+  margin-top: 40px;
+  padding: 80px 65px 0;
+  margin-bottom: 80px;
+}
+
+.title {
+  font-family: Lato;
+  font-size: 56px;
+  font-weight: $fw-bold;
+  margin-bottom: 16px;
+}
+
+.subtitle {
+  width: 766px;
+  font-family: Lato;
+  font-size: 12px;
+  font-weight: $fw-regular;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
