--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -49,4 +49,5 @@ $color-lazur-label: #2d9cdb;
 $color-blue-label: #2f80ed;
 $color-orange: #f2994a;
 $color-box-shadow: 0px 4px 12px rgba(27, 36, 45, 0.15);
-
+$color-modal-bg-blue: rgba(0, 60, 118, 0.4);
+$color-red: red;
