Feat  area page (#71)
* feat area page

* feat area page

Co-authored-by: FeNRiR <germes955@gamail.com>
Co-authored-by: Martin Lee <72463518+martinLjs@users.noreply.github.com>

--- a/src/features/HotelCard/HotelCard.module.scss
+++ b/src/features/HotelCard/HotelCard.module.scss
@@ -3,7 +3,7 @@
 .hotelCard {
   display: flex;
   flex-direction: column;
-  width: 368px;
+  min-width: 368px;
   background-color: $color-white;
   border-radius: 16px;
   box-shadow: $color-light-grey;
