--- a/src/features/TripCard/TripCard.module.scss
+++ b/src/features/TripCard/TripCard.module.scss
@@ -1,9 +1,10 @@
 @use 'styles/style.scss' as *;
 
 .wrapper {
-  width: 32%;
+  min-width: 32%;
   box-shadow: 0 18px 18px rgba(0, 60, 118, 0.05);
   border-radius: 16px;
+  background-color: $color-white;
 }
 
 .wide {
@@ -42,11 +43,13 @@
   margin-bottom: 3px;
   font-size: 12px;
   line-height: 14px;
+  text-align: left;
   color: $color-checkbox-gray;
 }
 
 .regionName div:last-child {
   font-size: 20px;
+  font-weight: $fw-bold;
   line-height: 24px;
   color: $color-primary-black;
 }
@@ -59,6 +62,7 @@
   margin-bottom: 5px;
   font-size: 20px;
   line-height: 24px;
+  font-weight: $fw-regular;
 }
 
 .durationWrapper {
@@ -72,15 +76,10 @@
 .tags {
   display: flex;
   padding-top: 13px;
-  font-size: 10px;
-  line-height: 12px;
   color: $color-white;
 }
-
-.tags * {
-  margin-right: 5px;
-  padding: 5px 10px;
-  border-radius: 16px;
+.tag {
+  margin-right: 8px;
 }
 
 .beachView {
@@ -92,8 +91,12 @@
 }
 
 .myButton {
+  font-size: 12px;
+  font-weight: $fw-bold;
+  line-height: 14px;
+  text-align: center;
   width: 100%;
-  padding: 23px 0;
+  padding: 6px 0;
   border-radius: 0 0 16px 16px;
 }
 
