--- a/src/components/InputCalendar/CalendarRight/InputCalendarRight.module.scss
+++ b/src/components/InputCalendar/CalendarRight/InputCalendarRight.module.scss
@@ -21,9 +21,8 @@
 
 .calendarIcon {
   cursor: pointer;
-  padding: 8px;
   transform: scale(1.8);
-  margin-right: 8px;
+  padding-right: 8px;
   margin-left: auto;
   display: flex;
   align-items: center;
