--- a/src/features/DestinationIntro/DestinationIntro.module.scss
+++ b/src/features/DestinationIntro/DestinationIntro.module.scss
@@ -1,38 +1,39 @@
 @use 'styles/style' as *;
 
-.destinationIntro {
+.intro {
   background-color: $color-light-grey;
   margin: 80px;
   border-radius: 16px;
   display: flex;
-  box-shadow: 0 4px 12px 0 rgba(0, 60, 118, 0.05);
+  box-shadow: $color-box-shadow;
 }
-.destinationIntroLeft {
+.introLeftContainer {
   width: 65%;
   padding: 56px;
 }
 .address {
   font-size: 16px;
-  font-weight: 400;
+  font-weight: $fw-regular;
   line-height: 19px;
   color: $color-laros-dark-grey;
-  margin: 17px 0 8px;
+  margin-top: 17px;
 }
 .name {
   font-size: 48px;
-  font-weight: 700;
+  font-weight: $fw-bold;
   line-height: 58px;
+  margin-top: 8px;
   color: $color-bg-black;
 }
 .description {
   font-size: 12px;
-  font-weight: 400;
+  font-weight: $fw-regular;
   line-height: 20px;
   margin-top: 16px;
   color: $color-bg-black;
 }
 .seeMore {
-  font-weight: Bold;
+  font-weight: $fw-bold;
   font-size: 12px;
   line-height: 14px;
   color: $color-laros-dark-grey;
@@ -41,7 +42,7 @@
   margin-top: 12px;
   margin-bottom: 16px;
 }
-.destinationIntroRight {
+.introRightContainer {
   border-radius: 0 16px 16px 0 ;
   width: 40%;
   overflow: hidden;
