--- a/src/features/TripCard/TripCard.module.scss
+++ b/src/features/TripCard/TripCard.module.scss
@@ -2,7 +2,7 @@
 
 .wrapper {
   min-width: 32%;
-  box-shadow: 0 18px 18px rgba(0, 60, 118, 0.05);
+  box-shadow: 0 0 5px 5px rgba(0, 60, 118, 0.05);
   border-radius: 16px;
   background-color: $color-white;
 }
