--- a/src/pages/DestinationInfoPage/Trips/Trips.module.scss
+++ b/src/pages/DestinationInfoPage/Trips/Trips.module.scss
@@ -16,11 +16,12 @@
   font-weight: $fw-regular;
   line-height: 20px;
   text-align: center;
+  width: 1110px;
   margin: 0 auto 40px;
 }
 .slider {
   margin: 0 144px;
 }
 .tripCard {
-  margin: 0 12px;
+  margin: 5px 12px 0 12px;
 }
