--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -20,6 +20,7 @@ $color-primary-black: #1b242d;
 
 $color-light-black: #333;
 $color-bg-black: #1b242d;
+$color-bg-gallery: rgba(0, 0, 0, 0.9);
 $color-layout-blue: rgba(0, 60, 118, 0.75);
 $color-layout-dark-blue: rgba(0, 60, 118, 1);
 $color-white-blue: #0abaee;
