fixed the select (#62)
* fixed the select

* fix select 2

* fix select 3

* fix the styles

* changed the select

* fixed the styles

* checkout commit

* changed icon sizes

* fixed the comments

* deleted the options from example

Co-authored-by: Your Name <al1m.budaev@yandex.ru>
Co-authored-by: Martin Lee <72463518+martinLjs@users.noreply.github.com>

--- a/src/features/AddressInput/AddressInput.module.scss
+++ b/src/features/AddressInput/AddressInput.module.scss
@@ -8,6 +8,7 @@
   border-radius: 8px;
   padding-top: 8px;
   margin-bottom: 8px;
+  background-color: $color-white;
 }
 .addressInputs {
   display: flex;
@@ -19,6 +20,7 @@
   font-weight: $fw-medium;
   color: $color-placeholder;
   padding: 8px;
+  text-align: left;
 }
 
 .adressZip,
