--- a/src/features/DestinationMaps/Greece/Greece.module.scss
+++ b/src/features/DestinationMaps/Greece/Greece.module.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   margin-right: 500px;
   height: 1068px;
-  width: 1280px;
+  width: 1040px;
 }
 
 /*Sub */
@@ -16,7 +16,7 @@
   transition: all 0.2s ease-in;
   margin-right: 206px;
   margin-top: 248px;
-  cursor: url('/public/assets/images/destinations/cursor.png'), auto;
+  cursor: url('../../../../public/assets/images/destinations/cursor.png'), auto;
 }
 
 .sub__gr2 {
@@ -24,7 +24,7 @@
   margin-right: 102px;
   margin-top: 188px;
   transition: 0.2s all ease-in;
-  cursor: url(/public/assets/images/destinations/cursor.png), auto;
+  cursor: url('../../../../public/assets/images/destinations/cursor.png'), auto;
 }
 
 .sub__gr3 {
@@ -32,12 +32,7 @@
   margin-top: 20px;
   margin-left: 200px;
   transition: 0.2s all ease-in;
-  cursor: url(/public/assets/images/destinations/cursor.png), auto;
-}
-
-.sub__gr3:hover {
-  fill: #f5bc2e;
-  z-index: 1;
+  cursor: url('../../../../public/assets/images/destinations/cursor.png'), auto;
 }
 
 .sub__gr4 {
@@ -46,11 +41,8 @@
   margin-left: 256px;
   transition: 0.2s all ease-in;
   transform: rotate(0.5deg);
-  cursor: url(/public/assets/images/destinations/cursor.png), auto;
-}
-
-.sub__gr4:hover {
-  fill: #22aaa8;
+  cursor: url('../../../../public/assets/images/destinations/cursor.png'), auto;
+  z-index: 1;
 }
 
 .sub__gr5 {
@@ -59,7 +51,7 @@
   margin-right: 48px;
   transition: 0.2s all ease-in;
   z-index: 1;
-  cursor: url(/public/assets/images/destinations/cursor.png), auto;
+  cursor: url('../../../../public/assets/images/destinations/cursor.png'), auto;
 }
 
 .sub__gr6 {
@@ -67,7 +59,7 @@
   margin-top: 336px;
   margin-left: 236px;
   transition: 0.2s all ease-in;
-  cursor: url(/public/assets/images/destinations/cursor.png), auto;
+  cursor: url('../../../../public/assets/images/destinations/cursor.png'), auto;
 }
 
 .sub__gr7 {
@@ -75,7 +67,7 @@
   transition: 0.2s all ease-in;
   margin-left: 614px;
   margin-top: 134px;
-  cursor: url(/public/assets/images/destinations/cursor.png), auto;
+  cursor: url('../../../../public/assets/images/destinations/cursor.png'), auto;
 }
 
 .sub__gr8 {
@@ -83,7 +75,7 @@
   margin-top: 460px;
   margin-left: 470px;
   transition: 0.2s all ease-in;
-  cursor: url(/public/assets/images/destinations/cursor.png), auto;
+  cursor: url('../../../../public/assets/images/destinations/cursor.png'), auto;
 }
 
 .sub__gr9 {
@@ -91,7 +83,7 @@
   margin-top: 720px;
   margin-left: 400px;
   transition: 0.2s all ease-in;
-  cursor: url(/public/assets/images/destinations/cursor.png), auto;
+  cursor: url('../../../../public/assets/images/destinations/cursor.png'), auto;
 }
 
 .sub__gr10 {
@@ -99,7 +91,7 @@
   margin-top: 520px;
   margin-left: 980px;
   transition: 0.2s all ease-in;
-  cursor: url(/public/assets/images/destinations/cursor.png), auto;
+  cursor: url('../../../../public/assets/images/destinations/cursor.png'), auto;
 }
 
 .wrapper {
@@ -113,7 +105,7 @@
 
 .cartShown_2 {
   left: 60%;
-  bottom: 80%;
+  top: 20%;
 }
 
 .cartShown_3 {
@@ -130,6 +122,7 @@
 }
 
 .cartShown_6 {
+  bottom: 50%;
 }
 
 .cartShown_7 {
@@ -139,53 +132,54 @@
 
 .cartShown_8 {
   left: 60%;
+  bottom: 80%;
 }
 
 .cartShown_9 {
 }
 
 .cartShown_10 {
-  left: 70%;
-  bottom: 50%;
+  left: 50%;
+  bottom: 70%;
 }
 
 .map1:hover {
-  fill: #f5bb2c;
+  fill: $color-sub-r1;
 }
 
 .map2:hover {
-  fill: #2f6bb4;
+  fill: $color-sub-r2;
 }
 
 .map3:hover {
-  fill: #f5bc2e;
+  fill: $color-sub-r1;
   z-index: 1;
 }
 
 .map4:hover {
-  fill: #22aaa8;
-}
-
-.map6:hover {
-  fill: #907c72;
+  fill: $color-sub-r4;
 }
 
 .map5:hover {
-  fill: #a2cf6c;
+  fill: $color-sub-r5;
+}
+
+.map6:hover {
+  fill: $color-sub-r6;
 }
 
 .map7:hover {
-  fill: #907c72;
+  fill: $color-sub-r6;
 }
 
 .map8:hover {
-  fill: #814d99;
+  fill: $color-sub-r7;
 }
 
 .map9:hover {
-  fill: #be007d;
+  fill: $color-sub-r8;
 }
 
 .map10:hover {
-  fill: #814d99;
+  fill: $color-sub-r7;
 }
