--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -52,3 +52,11 @@ $color-orange: #f2994a;
 $color-box-shadow: 0px 4px 12px rgba(27, 36, 45, 0.15);
 $color-modal-bg-blue: rgba(0, 60, 118, 0.4);
 $color-red: red;
+
+$color-sub-r1: #f5bb2c;
+$color-sub-r2: #2f6bb4;
+$color-sub-r4: #22aaa8;
+$color-sub-r5: #a2cf6c;
+$color-sub-r6: #907c72;
+$color-sub-r7: #814d99;
+$color-sub-r8: #be007d;
