--- a/src/pages/HomePage/SelectedType/SliderItem/SliderItem.module.scss
+++ b/src/pages/HomePage/SelectedType/SliderItem/SliderItem.module.scss
@@ -18,6 +18,8 @@
   border-radius: 8px;
   overflow: hidden;
   align-items: center;
+  height: 400px;
+  position: relative;
 }
 
 .visible {
@@ -47,7 +49,8 @@
 .button {
   justify-content: center;
   margin: 0 auto;
-  padding-top: 25px;
+  position: absolute;
+  bottom: 25px;
 }
 
 .unhover {
