Fix hotel page (#77)
* fix hotel page

* fix hotel page

* fix hotel page

* fix hotel page

* fix hotel page

* fix hotel page

* fix hotel page

* fix hotel page

* fix hotel page

* fix hotel page

* fix hotel page

* fix hotel page

* fix hotel page

* fix hotel page

Co-authored-by: FeNRiR <germes955@gamail.com>

--- a/src/components/InputCalendar/CalendarRight/InputCalendarRight.module.scss
+++ b/src/components/InputCalendar/CalendarRight/InputCalendarRight.module.scss
@@ -14,9 +14,9 @@
   padding: 8px;
   width: 80%;
   font-size: 12px;
-  text-align: right;
   display: flex;
   align-items: center;
+  justify-content: end;
 }
 
 .calendarIcon {
