--- a/src/features/HotelCard/HotelCard.module.scss
+++ b/src/features/HotelCard/HotelCard.module.scss
@@ -37,7 +37,12 @@
   text-transform: capitalize;
   color: $color-laros-dark-grey;
 }
-
+.rating {
+  span {
+    margin-right: 10px;
+    color: $color-yellow !important;
+  }
+}
 .name {
   font-weight: $fw-bold;
   font-size: 20px;
