fix input calendar update styles (#83)
* fix safari line-height

* move to css module safari hack

* add styles as Martin said

* add styles to calendar arrows

* add top calendar version

* add review fixes

* add icons props, styles, new props

* add PR fixes

* add style fixes

* fix paddings

* fix import example

* add height and padding fix

* remove extra

* style fixes: arrow_prew, padding-left for input

Co-authored-by: Martin Lee <72463518+martinLjs@users.noreply.github.com>

--- a/src/components/InputCalendar/InputCalendar.module.scss
+++ b/src/components/InputCalendar/InputCalendar.module.scss
@@ -55,9 +55,9 @@
   }
   :global(.react-calendar__navigation__prev-button) {
     font-size: 24px !important;
-    transform: scale(-1, 1);
+    display: flex;
+    align-items: center;
     color: $color-modal-bg !important ;
-    text-align: right;
     border-radius: 12px;
   }
 
@@ -117,7 +117,7 @@
   position: relative;
   z-index: 10;
   min-height: 33px;
-  padding-top: 1px;
+  padding-left: 8px;
 }
 .shorten {
   height: 33px;
